<resources>
    <string name="app_name">NibhaMaharjan_MAPD711_Assignment2_PizzaOnline</string>
    <!--    Menu items -->
    <string name="menuTitle">Pizza</string>
    <string name="navhome">Home</string>
    <string name="menu1">Meat Supreme</string>
    <string name="menu2">Super Hawaiian</string>
    <string name="menu3">Veggie</string>
    <string name="menu4">Mediterranean</string>
    <string name="menu5">Cheddar Supreme</string>

    <!--    Pizza Sizes-->
    <string name="pizza_small">Small 4 Inches</string>
    <string name="pizza_medium">Medium 8 Inches</string>
    <string name="pizza_big">Big 12 Inches</string>
    <string name="pizza_large">Large 16 Inches</string>

    <!--    Button Text-->
    <string name="orderbutton">Order</string>

    <!--    Payment type-->
    <string-array name="ctype">
        <item>Visa</item>
        <item>MasterCard</item>
        <item>American Express</item>
    </string-array>

</resources>