<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/nav_home"
        android:title="@string/navhome"
        android:icon="@drawable/baseline_home_24"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_option"
        android:title="@string/menuTitle"
        app:showAsAction="always">
        <menu>
            <item android:id="@+id/nav_meat"
            android:title="@string/menu1"
                android:icon="@drawable/meaticon"
                app:showAsAction="ifRoom"/>
            <item android:id="@+id/nav_hawaii"
                android:title="@string/menu2"
                android:icon="@drawable/hawaiiicon"
                app:showAsAction="ifRoom"/>
            <item android:id="@+id/nav_veggie"
                android:title="@string/menu3"
                android:icon="@drawable/veggiicon"
                app:showAsAction="ifRoom"/>
            <item android:id="@+id/nav_meddi"
                android:title="@string/menu4"
                android:icon="@drawable/mediicon"
                app:showAsAction="ifRoom"/>
            <item android:id="@+id/nav_cheddar"
                android:title="@string/menu5"
                android:icon="@drawable/cheddicon"
                app:showAsAction="ifRoom"/>
        </menu>
    </item>
</menu>